[package]
name = "polygraph"
version = "0.1.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"
license = "GPL-2.0+"
readme = "README.md"
documentation = "https://docs.rs/polygraph/"
repository = "https://github.com/droundy/polygraph"
description = "A multiple-interconnected graph library or in-memory relational database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

polygraph-macro = { path = "polygraph-macro" }
lazy_static = "1.0"
tinyset = "0.4.2"

[dev-dependencies]

trybuild = "1.0.18"

[workspace]
members = ["polygraph-macro", "polygraph-test"]
