[package]
name = "polygraph-macro"
version = "0.1.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"
license = "GPL-2.0+"
description = "A multiple-interconnected graph library or in-memory relational database (proc-macro implementation)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
heck = "0.3.1"
tinyset = "0.4.2"

[lib]
proc-macro = true
